--- a/OSFOLCrossPlatform/OSFOLCrossPlatform/Views/LoginPage.xaml
+++ b/OSFOLCrossPlatform/OSFOLCrossPlatform/Views/LoginPage.xaml
@@ -6,9 +6,9 @@
     <ContentPage.Content>
       <StackLayout VerticalOptions="StartAndExpand">
         <Label Text="Username" />
-        <Entry x:Name="usernameEntry" Placeholder="username" />
+        <Entry x:Name="usernameEntry" Placeholder="Username" />
         <Label Text="Password" />
-        <Entry x:Name="passwordEntry" IsPassword="true" />
+        <Entry x:Name="passwordEntry" Placeholder="Password" IsPassword="true" />
         <Button Text="Login" Clicked="OnLoginButtonClicked" />
         <Label x:Name="messageLabel" />
       </StackLayout>
